--- a/src/main/res/layout/footer_shop_list.xml
+++ b/src/main/res/layout/footer_shop_list.xml
@@ -6,6 +6,7 @@
               android:layout_height="wrap_content">
 
    <TextView
+       android:layout_marginBottom="@dimen/dimen_30_dip"
        android:id="@+id/add_new_shop"
        android:layout_width="@dimen/dimen_480_dip"
        android:layout_height="@dimen/dimen_60_dip"
