--- a/src/main/res/layout/popwindow_shop_choose.xml
+++ b/src/main/res/layout/popwindow_shop_choose.xml
@@ -36,17 +36,11 @@
             android:layout_marginBottom="@dimen/dimen_2_dip"
             android:background="@color/color_e5"/>
 
-        <ScrollView
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/shop_list_recycler"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/shop_list_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-            </LinearLayout>
-        </ScrollView>
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
