--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -15,7 +15,7 @@
     <color name="color_555">#555555</color>
     <color name="color_db">#dbdbdb</color>
     <color name="color_db5151">#db5151</color>
-
+    <color name="color_fffC726E">#FFFC726E</color>
 
     <color name="color_ec9590">#ec9590</color>
 
