--- a/src/main/res/layout/activity_goods_preview.xml
+++ b/src/main/res/layout/activity_goods_preview.xml
@@ -7,12 +7,12 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <WebView
+        <com.tencent.smtt.sdk.WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </WebView>
+        </com.tencent.smtt.sdk.WebView>
         <include android:id="@+id/loading_anim" layout="@layout/loading_anim" />
         <include layout="@layout/common_network_error" />
     </RelativeLayout>
