--- a/src/main/res/layout/activity_shop_menu.xml
+++ b/src/main/res/layout/activity_shop_menu.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/dimen_20_dip">
 
         <RelativeLayout
             android:id="@+id/top_container"
@@ -21,19 +22,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@mipmap/index_top_bg" />
+                android:src="@mipmap/index_top_bg"/>
 
             <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/shop_avatar"
-                android:layout_width="@dimen/dimen_192_dip"
-                android:layout_height="@dimen/dimen_192_dip"
-                android:layout_centerInParent="true"
-                android:scaleType="fitXY"
-                android:src="@mipmap/mitouxiang"
-                app:riv_border_color="#88ffffff"
-                app:riv_border_width="@dimen/dimen_8_dip"
-                app:riv_corner_radius="30dip"
-                app:riv_oval="true" />
+                                                             android:id="@+id/shop_avatar"
+                                                             android:layout_width="@dimen/dimen_192_dip"
+                                                             android:layout_height="@dimen/dimen_192_dip"
+                                                             android:layout_centerInParent="true"
+                                                             android:scaleType="fitXY"
+                                                             android:src="@mipmap/mitouxiang"
+                                                             app:riv_border_color="#88ffffff"
+                                                             app:riv_border_width="@dimen/dimen_8_dip"
+                                                             app:riv_corner_radius="30dip"
+                                                             app:riv_oval="true"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -54,7 +55,7 @@
                     android:shadowRadius="3"
                     android:textColor="@color/color_white"
                     android:textSize="@dimen/dimen_26_dip"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
             </LinearLayout>
         </RelativeLayout>
 
@@ -70,17 +71,17 @@
                 android:layout_height="wrap_content"
                 android:text="0.00"
                 android:textColor="@color/color_333"
-                android:textSize="@dimen/dimen_88_dip" />
+                android:textSize="@dimen/dimen_88_dip"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/total_profit"
                 android:textColor="@color/color_666"
-                android:textSize="@dimen/dimen_26_dip" />
+                android:textSize="@dimen/dimen_26_dip"/>
         </LinearLayout>
 
-        <include layout="@layout/line_h_color_e5" />
+        <include layout="@layout/line_h_color_e5"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,14 +101,14 @@
                     android:layout_height="wrap_content"
                     android:text="0.00"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_38_dip" />
+                    android:textSize="@dimen/dimen_38_dip"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/today_profit"
                     android:textColor="@color/color_999"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
             <LinearLayout
@@ -123,14 +124,14 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_38_dip" />
+                    android:textSize="@dimen/dimen_38_dip"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/today_orders"
                     android:textColor="@color/color_999"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
             <LinearLayout
@@ -146,47 +147,23 @@
                     android:layout_height="wrap_content"
                     android:text="0"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_38_dip" />
+                    android:textSize="@dimen/dimen_38_dip"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/total_visits"
                     android:textColor="@color/color_999"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
         </LinearLayout>
 
-        <include layout="@layout/line_h_color_e5" />
+        <include layout="@layout/line_h_color_e5"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_192_dip"
             android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/category_choose_container"
-                android:layout_width="0dip"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon1" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/dimen_20_dip"
-                    android:text="@string/choose_good"
-                    android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
-            </LinearLayout>
-
-            <include layout="@layout/line_v_color_e5" />
 
             <LinearLayout
                 android:id="@+id/vip_container"
@@ -199,7 +176,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon2" />
+                    android:src="@mipmap/syicon2"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -207,10 +184,10 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/vip_area"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
-            <include layout="@layout/line_v_color_e5" />
+            <include layout="@layout/line_v_color_e5"/>
 
             <LinearLayout
                 android:id="@+id/my_shop_container"
@@ -223,7 +200,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon3" />
+                    android:src="@mipmap/syicon3"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -231,16 +208,10 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/my_shop"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
-        </LinearLayout>
 
-        <include layout="@layout/line_h_color_e5" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_192_dip"
-            android:orientation="horizontal">
+            <include layout="@layout/line_v_color_e5"/>
 
             <LinearLayout
                 android:id="@+id/my_profit_container"
@@ -253,7 +224,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon4" />
+                    android:src="@mipmap/syicon4"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -261,10 +232,21 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/my_profit"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
-            <include layout="@layout/line_v_color_e5" />
+
+        </LinearLayout>
+
+        <include layout="@layout/line_h_color_e5"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dimen_192_dip"
+            android:orientation="horizontal">
+
+
+            <include layout="@layout/line_v_color_e5"/>
 
             <LinearLayout
                 android:id="@+id/order_container"
@@ -277,7 +259,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon5" />
+                    android:src="@mipmap/syicon5"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -285,10 +267,34 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/order_manage"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
-            <include layout="@layout/line_v_color_e5" />
+            <include layout="@layout/line_v_color_e5"/>
+
+            <LinearLayout
+                android:id="@+id/me_container"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/me"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_20_dip"
+                    android:text="@string/me"
+                    android:textColor="@color/color_666"
+                    android:textSize="@dimen/dimen_26_dip"/>
+            </LinearLayout>
+
+            <include layout="@layout/line_v_color_e5"/>
 
             <LinearLayout
                 android:id="@+id/setting_container"
@@ -301,7 +307,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon6" />
+                    android:src="@mipmap/syicon6"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -309,16 +315,17 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/setting"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
         </LinearLayout>
 
-        <include layout="@layout/line_h_color_e5" />
+        <include layout="@layout/line_h_color_e5"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_192_dip"
             android:orientation="horizontal"
+            android:visibility="visible"
             android:weightSum="3">
 
             <LinearLayout
@@ -332,7 +339,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@mipmap/syicon7" />
+                    android:src="@mipmap/syicon7"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -340,11 +347,35 @@
                     android:layout_marginTop="@dimen/dimen_20_dip"
                     android:text="@string/invite_friend"
                     android:textColor="@color/color_666"
-                    android:textSize="@dimen/dimen_26_dip" />
+                    android:textSize="@dimen/dimen_26_dip"/>
+            </LinearLayout>
+            <include layout="@layout/line_v_color_e5"/>
+
+            <LinearLayout
+                android:id="@+id/category_choose_container"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/syicon1"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_20_dip"
+                    android:text="@string/choose_good"
+                    android:textColor="@color/color_666"
+                    android:textSize="@dimen/dimen_26_dip"/>
             </LinearLayout>
 
-            <include layout="@layout/line_v_color_e5" />
-
         </LinearLayout>
+        <include layout="@layout/line_h_color_e5"/>
+
     </LinearLayout>
 </ScrollView>
