--- a/src/main/res/layout/alert_gray.xml
+++ b/src/main/res/layout/alert_gray.xml
@@ -11,8 +11,7 @@
         android:textSize="@dimen/dimen_28_dip"
         android:id="@+id/alert_text"
         android:gravity="center"
-        android:paddingTop="@dimen/dimen_15_dip"
-        android:paddingBottom="@dimen/dimen_15_dip"
+        android:padding="@dimen/dimen_15_dip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
