--- a/src/main/res/layout/activity_shop_menu.xml
+++ b/src/main/res/layout/activity_shop_menu.xml
@@ -65,7 +65,7 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <TextView
+            <com.xiaomabao.weidian.ui.RiseNumberTextView
                 android:id="@+id/total_profit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <com.xiaomabao.weidian.ui.RiseNumberTextView
                     android:id="@+id/today_profit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <com.xiaomabao.weidian.ui.RiseNumberTextView
                     android:id="@+id/today_orders"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -141,7 +141,7 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
+                <com.xiaomabao.weidian.ui.RiseNumberTextView
                     android:id="@+id/total_visits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
